# s00_github

./: .gitignore  CMakeLists.txt  case_TEST.md  run.py  run.sh  run_loop_testcase.py  run_test.py  tempCodeRunnerFile.py
Utility/: Define.cpp  Define.h
Utility/IO/: FileIO.cpp  FileIO.h  FileManager.cpp  FileManager.h
Utility/Logger/: Logger.h
Utility/Parse/: Parsing.h
cmake/: flatbuffers.cmake  setup.cmake
docs/: dram_unallocated_lutdma.md
opflow_print/: 1024_mbv2.txt  1029_bypass.txt  s000_opflow_print.py
s000_cmodel/: .gitignore
s000_cmodel/.git_backup_embedded_20260328_185321/: COMMIT_EDITMSG  HEAD  ORIG_HEAD  config  index
s000_cmodel/.git_backup_embedded_20260328_185321/refs/remotes/origin/: main
s000_cmodel/source/: main.cpp
s000_cmodel/source/firmware/: CMakeLists.txt  Makefile  cmake_install.cmake
s000_cmodel/source/firmware/schema/: cpu.fbs  setup.fbs
s000_cmodel/source/firmware/src/: setup_520_v2.cpp  setup_520_v2.h  setup_720_v1.cpp  setup_720_v1.h  setup_impl.h  setup_parser.cpp  setup_parser.h
s000_cmodel/source/graph/: Config.h  Graph.cpp  Graph.h  Node.h
s000_cmodel/source/module/memory/: Bank.cpp  Bank.h  DMA.cpp  DMA.h  DRAM.cpp  DRAM.h  Nmem.cpp  Nmem.h
s000_cmodel/source/module/nputop/: NPU.cpp  NPU.h
s000_cmodel/source/module/nputop/command/: Command.cpp  Command.h  CommandList.cpp  CommandList.h
s000_cmodel/source/module/nputop/kernels/: BN.cpp  BN.h  FeatureMap.cpp  FeatureMap.h  Lut.cpp  Lut.h  Mac.cpp  Mac.h  Memory.cpp  Memory.h  Module.cpp  Module.h  Pool.cpp  Pool.h  Psum.cpp  Psum.h  RBM.cpp  RBM.h  Relu.cpp  Relu.h  Trim.cpp  Trim.h  WBM.cpp  WBM.h
s000_cmodel/source/module/nputop/register/: Register.cpp  Register.h  RegisterFile.cpp  RegisterFile.h
s000_cmodel/source/module/nputop/weight/: Weight.cpp  Weight.h
s000_cmodel/source/module/soctop/: SoCS900.cpp  SoCS900.h
s000_cmodel/source/utils/src/: NPURegConfig.h  Tensor.cpp  Tensor.h  utility.h
scripts/: extract_wrong_cases.py  parse_opflow.py  patch_opflow_lut_addr.py  print_opflow_words.py
testcase/12_10/00067_v003_CONV3X3_FCH/golden/: golden.bin:Zone.Identifier
testcase/12_10/00068_v003_CONV3X3_FCH/case/: map_tb.json:Zone.Identifier
testcase/12_10/00071_v002_CONV1X1/case/: pdma_seq.bin:Zone.Identifier
testcase/12_7/00001_v003_CONV3X3_FCH/case/: map_tb.json
testcase/26_1_20/v002_CONV1X1/: v002_CONV1X1_modified_22.rar
testcase/26_1_20/v002_CONV1X1/00010_v002_CONV1X1/case/: opflow.bin.bak
testcase/26_1_20/v002_CONV1X1/00011_v002_CONV1X1/case/: opflow.bin.bak
testcase/26_1_20/v002_CONV1X1/00012_v002_CONV1X1/case/: opflow.bin.bak
testcase/26_1_20/v002_CONV1X1/00013_v002_CONV1X1/case/: opflow.bin.bak
testcase/26_1_20/v002_CONV1X1/00014_v002_CONV1X1/case/: opflow.bin.bak
testcase/26_1_20/v002_CONV1X1/00031_v002_CONV1X1/case/: opflow.bin.bak
testcase/26_1_20/v002_CONV1X1/00036_v002_CONV1X1/case/: opflow.bin.bak
testcase/26_1_20/v002_CONV1X1/00037_v002_CONV1X1/case/: opflow.bin.bak
testcase/26_1_20/v002_CONV1X1/00038_v002_CONV1X1/case/: opflow.bin.bak
testcase/26_1_20/v002_CONV1X1/00039_v002_CONV1X1/case/: opflow.bin.bak
testcase/26_1_20/v002_CONV1X1/00040_v002_CONV1X1/case/: opflow.bin.bak
testcase/26_1_20/v002_CONV1X1/00045_v002_CONV1X1/case/: opflow.bin.bak
testcase/26_1_20/v002_CONV1X1/00046_v002_CONV1X1/case/: opflow.bin.bak
testcase/26_3_10/s000_case_resnet_cut_0310/: map.json  报错分析0310.md
testcase/26_3_14/case_0314_1layer/: 3.14Debug流程描述.docx
testcase/26_3_17/00001_v014_CONV1x1_4bit/: 00001_v014_CONV1x1_4bit_register_overflow_analysis_0317.docx  register_overflow_analysis.md
testcase/26_3_17/00001_v014_CONV1x1_4bit/golden/: 00001_v014_data_in.txt  00001_v014_golden.txt  00001_v014_weight_in.txt
testcase/26_3_20/s000_case_mobilenet_s100/: 报错分析_pmem_overflow_20260320.md
testcase/26_3_20/s000_case_resnet50_s100/: map.json
testcase/26_3_20/s100_case_mobilenet/: ERROR_ANALYSIS.md
testcase/26_3_23/s000_case_mobilenet/: map.json
testcase/26_3_27/s000_case_mobilenet/: map.json
testcase/26_3_27/s000_case_resnet_cut_0310/: map.json
testcase/26_3_27/s000_case_resnet_cut_1layer/: map.json
testcase/26_3_28/: report from cmodel-0328.md
testcase/26_3_4/case_mobilenet_v2_16_16_normal/: map.json
testcase/26_3_7/s000_case_vit_cut_1/: debug_0307.md  opflow_error_analysis.md
testcase/26_3_7/s000_case_vit_cut_4/: map.json
testcase/26_3_9/s000_case_vit_cut_1/: 误差分析_0309.md
(+14 files in other folders)
